navbar collapse bug fix

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1,7 +1,6 @@
 /* navbar*/
 
 .navbar {
-  height:10vh;
   padding: 0 0 1.5rem;
 }
 
